--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ html,body {
 }
 
 body {
-  display: flex;
+  display: block;
   flex-direction: column;
   place-items: center;
   min-width: 320px;
